<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:minHeight="50dp"
        android:contentDescription="@string/profile_img"
        android:src="@mipmap/ic_launcher" />
    
    <TextView
        android:id="@+id/tNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="50dp"
        android:text="@string/nama"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tnoHp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="50dp"
        android:text="@string/nohp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="18sp" />

</LinearLayout>